--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
-{"type": "module",
+{
+  "type": "module",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.10",
     "mkdirp": "^1.0.4",
     "slug": "^5.2.0",
     "superagent": "^7.1.1"
